tests/snapshots/render__issue_detail.snap
---
source: tests/render.rs
expression: "render_to_string(&mut app, 110, 26)"
---
┌Assigned to me · In Progress · Inbox────┐┌DAN2-7────────────────────────────────────────────────────────────┐
│!!! DAN2-7 In Progress Wood-fired oven r││DAN2-7  In Progress                                               ↑
│!!! DAN-10 In Progress Sprinkle dispense││Wood-fired oven runs 40°C too hot on Friday nights                █
│!!  DAN2-2 In Progress Delivery driver G││@dan  oven                                                        █
│!!! DAN2-3 Todo Add gluten-free base opt││https://linear.app/dans-donuts/issue/DAN2-7/wood-fired-oven-runs-t█
│!!  DAN-13 Todo Introduce a maple-bacon ││oo-hot                                                            █
│!!  DAN2-5 Backlog Settle the pineapple-││                                                                  █
│    DAN-15 Backlog Coffee pairing bundle││Symptoms                                                          █
│                                        ││                                                                  █
│                                        ││During the Friday rush the stone oven creeps past 480°C and bases █
│                                        ││scorch before the cheese melts.                                   █
│                                        ││                                                                  █
│                                        ││• Expected: steady 430°C                                          ║
│                                        ││• Actual: 470-480°C                                               ║
│                                        ││• Suspect the flue damper is sticking open                        ║
└ 1 of 7 ────────────────────────────────┘│                                                                  ║
┌Recently viewed─────────────────────────┐│Checklist                                                         ║
│Issues you open land here               ││                                                                  ║
└────────────────────────────────────────┘│[x] Swap the thermocouple                                         ║
┌Saved Views─────────────────────────────┐│[ ] Inspect the flue damper                                       ║
│⠋  Loading…                             ││[ ] Recalibrate the PID loop                                      ║
└────────────────────────────────────────┘│                                                                  ║
┌Teams───────────────────────────────────┐│▌ Damper was replaced 6 months ago, should still be under         ║
│⠋  Loading…                             ││warranty.                                                         ↓
└────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
 t show/hide   j/k scroll   C-d/C-u page   e edit   c comment   m comments   + react   o… Dan's Donuts · @dan
