tests/snapshots/render__jump_input_overlay.snap
---
source: tests/render.rs
expression: "render_to_string(&mut app, 84, 16)"
---
┌Assigned to me 1/3────────────┐┌Preview───────────────────────────────────────────┐
│⠋  Loading…                   ││No issue selected                                 │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
└──────────────────────────────┘│                                                  │
┌Recently viewed───────────────┐│                                                  │
│Issues you open ┌Issue id or URL─────────────────────────────────┐                │
└────────────────│ DAN2-7                                         │                │
┌Saved Views─────└────────────────────────────────────────────────┘                │
│⠋  Loading…                   ││                                                  │
└──────────────────────────────┘│                                                  │
┌Teams─────────────────────────┐│                                                  │
│⠋  Loading…                   ││                                                  │
└──────────────────────────────┘└──────────────────────────────────────────────────┘
 ←/→ move   enter go   esc cancel                                       connecting…
