tests/snapshots/render__jump_input_scrolls_to_keep_a_long_url_cursor_visible.snap
---
source: tests/render.rs
expression: "render_to_string(&mut app, 84, 16)"
---
┌Assigned to me 1/3────────────┐┌Preview───────────────────────────────────────────┐
│⠋  Loading…                   ││No issue selected                                 │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
└──────────────────────────────┘│                                                  │
┌Recently viewed───────────────┐│                                                  │
│Issues you open ┌Issue id or URL─────────────────────────────────┐                │
└────────────────│ar.app/dans-donuts/issue/DAN2-7/wood-fired-oven │                │
┌Saved Views─────└────────────────────────────────────────────────┘                │
│⠋  Loading…                   ││                                                  │
└──────────────────────────────┘│                                                  │
┌Teams─────────────────────────┐│                                                  │
│                              ││                                                  │
└──────────────────────────────┘└──────────────────────────────────────────────────┘
 ←/→ move   enter go   esc cancel                                       connecting…
