tests/snapshots/render__loading_placeholder.snap
---
source: tests/render.rs
expression: "render_to_string(&mut app, 110, 10)"
---
┌Assigned to me · In Progress · Inbox  ⠋─┐┌Preview───────────────────────────────────────────────────────────┐
│⠋  Loading…                             ││No issue selected                                                 │
│                                        ││                                                                  │
│                                        ││                                                                  │
└────────────────────────────────────────┘│                                                                  │
┌Recently viewed─────────────────────────┐│                                                                  │
┌Saved Views─────────────────────────────┐│                                                                  │
└────────────────────────────────────────┘│                                                                  │
┌Teams───────────────────────────────────┐└──────────────────────────────────────────────────────────────────┘
 j move   ] view   tab panel   1-9 jump   enter open   o browser   y yank   / find   z zoom   g … connecting…
