tests/snapshots/render__mention_autocomplete_popup.snap
---
source: tests/render.rs
expression: "render_to_string(&mut app, 90, 24)"
---
┌Assigned to me 1/3──────────────┐┌DAN2-7────────────────────────────────────────────────┐
│!!! DAN2-7 In Progress Wood-fire││DAN2-7  In Progress                                   ↑
│!!! DAN-10 In Progress Sprinkle ││Wood-fired oven runs 40°C too hot on Friday nights    █
│!!  DAN2-2 In Progress Delivery ││@dan  oven                                            █
│!!! DAN2-3 Todo Add gluten-free ││https://linear.app/dans-donuts/issue/DAN2-7/wood-fired█
│!!  DAN-13 Todo Introduce a mapl││-oven-runs-too-hot                                    █
│!!  DAN2-5 Ba┌Comment──────────────────────────────────────────────────────┐            █
│    DAN-15 Ba│ @                                                           │            █
│             │                                                             │            █
│             │                                                             │ps past     █
│             │                                                             │elts.       ║
│             │                                                             │            ║
│             │ ┌Mention───────────────────────────────┐                    │            ║
└ 1 of 7 ─────│ │@dan                                  │                    │            ║
┌Recently view│ │@sam                                  │                    │            ║
│Issues you op│ │@alex                                 │                    │            ║
└─────────────│ └──────────────────────────────────────┘                    │            ║
┌Saved Views──└─────────────────────────────────────────────────────────────┘            ║
│⠋  Loading…                     ││[x] Swap the thermocouple                             ║
└────────────────────────────────┘│[ ] Inspect the flue damper                           ║
┌Teams───────────────────────────┐│[ ] Recalibrate the PID loop                          ║
│⠋  Loading…                     ││                                                      ↓
└────────────────────────────────┘└──────────────────────────────────────────────────────┘
 C-s post   enter newline   ↑/↓/←/→ move   esc cancel                 Dan's Donuts · @dan
