tests/snapshots/render__saved_views_list.snap
---
source: tests/render.rs
expression: "render_to_string(&mut app, 110, 16)"
---
┌Assigned to me · In Progress · Inbox────┐┌ Urgent & unassigned  ·  6 issues ────────────────────────────────┐
│⠋  Loading…                             ││3 In Progress  ·  2 Todo  ·  1 Backlog                            │
└────────────────────────────────────────┘│                                                                  │
┌Recently viewed─────────────────────────┐│In Progress  3                                                    │
│Issues you open land here               ││!!! DAN2-7 Wood-fired oven runs 40°C too hot on F…   oven  dan  1d│
└────────────────────────────────────────┘│!!! DAN-10 Sprinkle dispenser jams during t…   production  dan  1d│
┌Saved Views─────────────────────────────┐│!!  DAN2-2 Delivery driver GPS points to the …   delivery  dan  1d│
│Urgent & unassigned                     ││Todo  2                                                           │
│Oven incidents                          ││!!! DAN2-3 Add gluten-free base option to the onl…   menu  dan  1d│
│Menu ideas                              ││!!  DAN-13 Introduce a maple-bacon donut for the …   menu  dan  1d│
│                                        ││Backlog  1                                                        │
└ 1 of 3 ────────────────────────────────┘│!!  DAN2-5 Settle the pineapple-on-pizza…   customer-poll  dan  1d│
┌Teams───────────────────────────────────┐│                                                                  │
│                                        ││                                                                  │
└────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
 j move   tab panel   enter open   o browser   y yank   / find   esc back   q quit        Dan's Donuts · @dan
