tests/snapshots/render__search_results_overlay.snap
---
source: tests/render.rs
expression: "render_to_string(&mut app, 100, 20)"
---
┌Assigned to me · In Progress · Inbox┐┌DAN2-7──────────────────────────────────────────────────────┐
│!!! DAN2-7 In Progress Wood-fired ov││DAN2-7  In Progress  Urgent                                 │
│!!! DAN-10 In Progress Sprinkle disp││Wood-fired oven runs 40°C too hot on Friday nights          │
│!!  DAN2-2 In Progress Delivery driv││@dan  oven                                                  │
│!!! DAN2-3 Todo Add┌Search  oven──────────────────────────────────────────────┐-7                 │
│!!  DAN-13 Todo Int│DAN2-7  Wood-fired oven runs 40°C too hot on Friday nights│                   │
│!!  DAN2-5 Backlog │                                                          │omments            │
│    DAN-15 Backlog │                                                          │                   │
└ 1 of 7 ───────────│                                                          │                   │
┌Recently viewed────│                                                          │                   │
│Issues you open lan│                                                          │                   │
└───────────────────│                                                          │                   │
┌Saved Views────────│                                                          │                   │
│⠋  Loading…        │                                                          │                   │
└───────────────────│                                                          │                   │
┌Teams──────────────└ 1 of 1 ──────────────────────────────────────────────────┘                   │
│Dan's Pizza                         ││                                                            │
│Dan's Donuts                        ││                                                            │
└ 1 of 2 ────────────────────────────┘└────────────────────────────────────────────────────────────┘
 j move   enter select   esc cancel                                             Dan's Donuts · @dan
