tests/snapshots/render__status_picker_overlay.snap
---
source: tests/render.rs
expression: "render_to_string(&mut app, 100, 20)"
---
┌Assigned to me · In Progress · Inbox┐┌DAN2-7──────────────────────────────────────────────────────┐
│!!! DAN2-7 In Progress Wood-fired ov││DAN2-7  In Progress                                         ↑
│!!! DAN-10 In Progress Sprinkle disp││Wood-fired oven runs 40°C too hot on Friday nights          █
│!!  DAN2-2 In Progress Delivery driv││@dan  oven                                                  █
│!!! DAN2-3 Todo Add gluten-free base││https://linear.app/dans-donuts/issue/DAN2-7/wood-fired-oven-█
│!!  DAN-13 Todo Introduce a┌Set status  DAN2-7────────────────────────┐                           █
│!!  DAN2-5 Backlog Settle t│Backlog  backlog                          │                           █
│    DAN-15 Backlog Coffee p│Todo  unstarted                           │                           ║
│                           │In Progress  started                      │                           ║
└ 1 of 7 ───────────────────│Done  completed                           │oven creeps past 480°C and ║
┌Recently viewed────────────│Cancelled  canceled                       │lts.                       ║
│Issues you open land here  │                                          │                           ║
└───────────────────────────│                                          │                           ║
┌Saved Views────────────────│                                          │                           ║
│⠋  Loading…                │                                          │king open                  ║
└───────────────────────────└ 1 of 5 ──────────────────────────────────┘                           ║
┌Teams───────────────────────────────┐│Checklist                                                   ║
│                                    ││                                                            ↓
└────────────────────────────────────┘└────────────────────────────────────────────────────────────┘
 j move   enter select   esc cancel                                             Dan's Donuts · @dan
